# weather-mock-api

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs  weather_data.rs
